--- a/docs/references/javascript/client.mdx
+++ b/docs/references/javascript/client.mdx
@@ -13,8 +13,8 @@ The `Client` object also holds information about any sign in or sign up attempts
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `signIn` | `SignIn \| null` | The current sign in attempt, or `null` if there is none. |
-| `signUp` | `SignUp \| null` | The current sign up attempt, or `null` if there is none. |
+| `signIn` | [`SignIn`](/docs/references/javascript/sign-in/sign-in) \| `null` | The current sign in attempt, or `null` if there is none. |
+| `signUp` | [`SignUp`](/docs/references/javascript/sign-up/sign-up) \| `null` | The current sign up attempt, or `null` if there is none. |
 | `sessions` | [`Session[]`](/docs/references/javascript/session) | A list of sessions that have been created on this client. |
 | `activeSessions` | [`Session[]`](/docs/references/javascript/session) | A list of active sessions on this client. |
 | `lastActiveSessiond` | `string` | Unique identifier of the last active [`Session`](/docs/references/javascript/session) on this client. |
