clean up email address, phone number, and web3 wallet pages

--- a/docs/references/javascript/email-address/email-address.mdx
+++ b/docs/references/javascript/email-address/email-address.mdx
@@ -5,29 +5,24 @@ description: The EmailAddress object is a model around an email address. Email a
 
 # `EmailAddress`
 
-The EmailAddress object is a model around an email address. Email addresses are used to provide identification for users.
+The `EmailAddress` object is a model around an email address. Email addresses are used to provide identification for users.
 
-Email addresses must be verified to ensure that they can be assigned to their rightful owners. The EmailAddress object holds all necessary state around the verification process.
+Email addresses must be verified to ensure that they can be assigned to their rightful owners. The `EmailAddress` object holds all necessary state around the verification process.
 
-The verification process always starts with the [EmailAddress.prepareVerification()](/docs/references/javascript/email-address/verification#prepare-verification) method, which will send a one-time verification code via an email message. The second and final step involves an attempt to complete the verification by calling the [EmailAddress.attemptVerification()](/docs/references/javascript/email-address/verification#attempt-verification) method, passing the one-time code as a parameter.
+The verification process always starts with the [`EmailAddress.prepareVerification()`](/docs/references/javascript/email-address/verification#prepare-verification) method, which will send a one-time verification code via an email message. The second and final step involves an attempt to complete the verification by calling the [`EmailAddress.attemptVerification()`](/docs/references/javascript/email-address/verification#attempt-verification) method, passing the one-time code as a parameter.
 
 Finally, email addresses can be linked to other identifications.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this email address.</>]},
-{cells: [<code>emailAddress</code>, <code>string</code>, <>The value of this email address, the actual email box address.</>]},
-{cells: [<code>verification</code>, <a href="/docs/references/javascript/verification"><code>Verification</code></a>, <>An object holding information on the verification of this email address.</>]},
-{cells: [<code>linkedTo</code>, <code>{"Array<{id: string, type: string}>"}</code>, <>An array of objects containing information about any identifications that might be linked to this email address </>]},
-  ]}
-/>
+| Name | Type | Description |
+|  --- | --- | --- |
+| `id` | `string` | A unique identifier for this email address. |
+| `emailAddress` | `string` | The value of this email address. |
+| `verification` | [`Verification`](/docs/references/javascript/verification) | An object holding information on the verification of this email address. |
+| `linkedTo` | `Array<{id: string, type: string}>` | An array of objects containing information about any identifications that might be linked to this email address. |
 
 ## Methods
-
 
 ### `create()`
 
@@ -43,7 +38,7 @@ Creates a new email address for the current user.
 function destroy(): Promise<void>;
 ```
 
-Delete this email address.
+Deletes this email address.
 
 ### `toString()`
 
@@ -73,25 +68,16 @@ The second function can be used to stop polling at any time, allowing for full c
 
 `createMagicLinkFlow` returns an object with two functions:
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>startMagicLinkFlow</code>, <code>(params: <a href="#start-magic-link-flow-params">StartMagicLinkFlowParams</a>) {"=>"} Promise{"<"}<a href="/docs/references/javascript/sign-up/sign-up">SignUp</a>{">"}</code>, <>Function to start the magic link flow. It prepares a magic link verification and polls for the verification result.</>]},
-    {cells: [<code>cancelMagicLinkFlow</code>, <code>{"() => void"}</code>, <>Function to cleanup the magic link flow. Stops waiting for verification results.</>]},
-  ]}
-/>
+| Name | Type | Description |
+|  --- | --- | --- |
+| `startMagicLinkFlow` | `(params: StartMagicLinkFlowParams) => Promise<EmailAddress>` | Function to start the magic link flow. It prepares a magic link verification and polls for the verification result. |
+| `cancelMagicLinkFlow` | `() => void` | Function to cleanup the magic link flow. Stops waiting for verification results. |
 
 #### `StartMagicLinkFlowParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>redirectUrl</code>, <code>string</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email.</>]}
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl` | `string` | The magic link target URL. Users will be redirected here once they click the magic link from their email. |
 
 ## Additional methods
 
