--- a/docs/references/javascript/email-address/verification.mdx
+++ b/docs/references/javascript/email-address/verification.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the EmailAddress class that allow you to v
 
 # `EmailAddress` Verification
 
-These are all methods on [the `EmailAddress` class](/docs/references/javascript/email-address/email-address) that allow you to verify a user's email address.
+These are all methods on the [`EmailAddress`](/docs/references/javascript/email-address/email-address) class that allow you to verify a user's email address.
 
 ## `prepareVerification()`
 
@@ -17,20 +17,10 @@ Kick off the verification process for this email address. An email message with 
 
 ### `PrepareEmailAddressVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>strategy </code>, <code>string</code>, <>
-    The verification strategy. Possible strategy values are:
-    <ul>
-    <li><code>email_link</code>:  User will receive an email magic link via email.</li>
-    <li><code>email_code</code>: User will receive a one-time authentication code via email.</li>
-    </ul>
-    </>]},
-    {cells: [<code>redirectUrl</code>, <code>string | undefined</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email. This param only applies if <code>strategy</code> is <code>email_link</code></>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'email_link' \| 'email_code'` | The verification strategy.<br/>Possible strategy values are:<br/><ul><li>`email_link`: User will receive an email magic link via email.</li><li>`email_code`: User will receive a one-time authentication code via email.</li></ul> |
+| `redirectUrl` | `string \| undefined` | The magic link target URL. Users will be redirected here once they click the magic link from their email. This param only applies if `strategy` is `email_link`. |
 
 ## `attemptVerification()`
 
@@ -42,11 +32,6 @@ Attempts to verify this email address, passing the one-time code that was sent a
 
 ### `AttemptEmailAddressVerificationParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>code</code>, <code>string</code>, <>The one-time code that was sent to the user's email address when prepareVerification was called with <code>strategy</code> set to <code>email_code</code></>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `code` | `string` | The one-time code that was sent to the user's email address when [EmailAddress.prepareVerification()](#prepare-verification) was called with `strategy` set to `email_code`. |
