--- a/docs/references/javascript/phone-number/second-factor.mdx
+++ b/docs/references/javascript/phone-number/second-factor.mdx
@@ -1,11 +1,11 @@
 ---
-title: PhoneNumber Second Factor
+title: PhoneNumber second factor
 description: These are all methods on the PhoneNumber class that allow you configure the configuration of a phone number as a second factor for multi-factor authentication (MFA).
 ---
 
 # `PhoneNumber` second factor
 
-These are all methods on [the `PhoneNumber` class](/docs/references/javascript/phone-number/phone-number) that allow you configure the configuration of a phone number as a second factor for multi-factor authentication (MFA).
+These are all methods on the [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) class that allow you configure the configuration of a phone number as a second factor for multi-factor authentication (MFA).
 
 ## `makeDefaultSecondFactor()`
 
@@ -25,10 +25,6 @@ Marks this phone number as reserved for [multi-factor authentication](/docs/cust
 
 ### `SetReservedForSecondFactorParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>reserved</code>, <code>boolean</code>, <>Pass <code>true</code> to mark this phone number as reserved for 2FA, or <code>false</code> to disable 2FA for this phone number.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `reserved` | `boolean` | Pass `true` to mark this phone number as reserved for 2FA, or `false` to disable 2FA for this phone number. |
