--- a/docs/references/javascript/web3-wallet/verification.mdx
+++ b/docs/references/javascript/web3-wallet/verification.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the Web3Wallet class that allow you to ver
 
 # `Web3Wallet` verification
 
-These are all methods on [the `Web3Wallet` class](/docs/references/javascript/web3-wallet/web3-wallet) that allow you to verify a user's web3 wallet.
+These are all methods on the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) class that allow you to verify a user's web3 wallet.
 
 ## `prepareVerification()`
 
@@ -18,18 +18,9 @@ Kick off the verification process for this web3 wallet. The user will be prompte
 
 ### `PrepareWeb3WalletVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>strategy</code>, <code>string</code>, <>
-The verification strategy. Possible strategy values are:
-<ul>
-<li><code>web3_metamask_signature</code>: User will need to sign a message and generate a signature using MetaMask browser extension.</li>
-</ul>
-</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'web3_metamask_signature'` | The verification strategy.<br/>Possible strategy values are:<br/><ul><li>`web3_metamask_signature`: User will need to sign a message and generate a signature using MetaMask browser extension.</li></ul> |
 
 ## `attemptVerification()`
 
@@ -41,10 +32,6 @@ Attempts to verify this web3 wallet, by passing the generated signature.
 
 ### `AttemptWeb3WalletVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>signature</code>, <code>string</code>, <>The signature that was generated after prepareVerification was called</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `signature` | `string` | The signature that was generated after [`prepareVerification`](#prepare-verification) was called. |
