--- a/docs/references/javascript/web3-wallet/web3-wallet.mdx
+++ b/docs/references/javascript/web3-wallet/web3-wallet.mdx
@@ -7,24 +7,19 @@ description: The Web3Wallet object describes a Web3 wallet address. The address 
 
 The `Web3Wallet` object describes a Web3 wallet address. The address can be used as a proof of identification for users.
 
-Web3 addresses must be verified to ensure that they can be assigned to their rightful owners. The verification is completed via Web3 wallet browser extensions such as [Metamask](https://metamask.io/). The `Web3Wallet3` object holds all the necessary state around the verification process.
+Web3 addresses must be verified to ensure that they can be assigned to their rightful owners. The verification is completed via Web3 wallet browser extensions, such as [Metamask](https://metamask.io/). The `Web3Wallet3` object holds all the necessary state around the verification process.
 
-The verification process always starts with the [Web3Wallet.prepareVerification()](/docs/references/javascript/web3-wallet/verification#prepare-verification) or [signIn.prepareFirstFactor()](/docs/references/javascript/sign-in/first-factor#prepare-first-factor) method, which will send the wallet address to Clerk Frontend API and will receive a nonce that needs to be signed by the Web3 wallet browser extension.
+The verification process always starts with the [`Web3Wallet.prepareVerification()`](/docs/references/javascript/web3-wallet/verification#prepare-verification) or [`signIn.prepareFirstFactor()`](/docs/references/javascript/sign-in/first-factor#prepare-first-factor) method, which will send the wallet address to Clerk Frontend API and will receive a nonce that needs to be signed by the Web3 wallet browser extension.
 
-The second and final step involves an attempt to complete the verification by calling [Web3Wallet.attemptVerification()](/docs/references/javascript/web3-wallet/verification#attempt-verification) method, passing the generated signature as a parameter.
+The second and final step involves an attempt to complete the verification by calling [`Web3Wallet.attemptVerification()`](/docs/references/javascript/web3-wallet/verification#attempt-verification) method, passing the generated signature as a parameter.
 
 ## Attributes
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this web3 wallet.</>]},
-{cells: [<code>web3Wallet</code>, <code>string</code>, <>In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <code>0x + 40 hexadecimal characters</code>. </>]},
-{cells: [<code>verification</code>, <a href="/docs/references/javascript/verification"><code>Verification</code></a>, <>An object holding information on the verification of this web3 wallet.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this web3 wallet. |
+| `web3Wallet` | `string` | In [Ethereum](https://docs.metamask.io/guide/common-terms.html#address-public-key), the address is made up of `0x + 40 hexadecimal characters`. |
+| `verification` | [`Verification`](/docs/references/javascript/verification) | An object holding information on the verification of this web3 wallet. |
 
 ## Methods
 
@@ -42,7 +37,7 @@ Creates a new web3 wallet.
 function destroy(): Promise<void>;
 ```
 
-Delete this web3 walllet.
+Deletes this web3 walllet.
 
 ### `toString()`
 
