--- a/docs/references/javascript/phone-number/phone-number.mdx
+++ b/docs/references/javascript/phone-number/phone-number.mdx
@@ -3,35 +3,27 @@ title: PhoneNumber
 description: The PhoneNumber object describes a phone number. Phone numbers can be used as a proof of identification for users, or simply as a means of contacting users.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `PhoneNumber`
 
 The `PhoneNumber` object describes a phone number. Phone numbers can be used as a proof of identification for users, or simply as a means of contacting users.
 
 Phone numbers must be verified to ensure that they can be assigned to their rightful owners. The `PhoneNumber` object holds all the necessary state around the verification process.
 
-The verification process always starts with the [PhoneNumber.prepareVerification()](/docs/references/javascript/phone-number/verification#prepare-verification) method, which will send a one-time verification code via an SMS message. The second and final step involves an attempt to complete the verification by calling the [PhoneNumber.attemptVerification()](/docs/references/javascript/phone-number/verification#attempt-verification) method, passing the one-time code as a parameter.
+The verification process always starts with the [`PhoneNumber.prepareVerification()`](/docs/references/javascript/phone-number/verification#prepare-verification) method, which will send a one-time verification code via an SMS message. The second and final step involves an attempt to complete the verification by calling the [`PhoneNumber.attemptVerification()`](/docs/references/javascript/phone-number/verification#attempt-verification) method, passing the one-time code as a parameter.
 
 Finally, phone numbers are used as part of [multi-factor authentication](/docs/custom-flows/mfa). Users receive an SMS message with a one-time code that they need to provide as an extra verification step.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this phone number.</>]},
-{cells: [<code>phoneNumber</code>, <code>string</code>, <>The value of this phone number, in <a href="https://en.wikipedia.org/wiki/E.164" target="_blank" rel="noopener">E.164</a> format.</>]},
-{cells: [<code>reservedForSecondFactor</code>, <code>boolean</code>, <>Value will be true if this phone number is reserved for multi-factor authentication (2FA), false otherwise.</>]},
-{cells: [<code>defaultSecondFactor</code>, <code>boolean</code>, <>Value will be true if this phone number is the default second factor, false otherwise. A user must have exactly one default second factor, if multi-factor authentication (2FA) is enabled.</>]},
-{cells: [<code>verification</code>, <a href="/docs/references/javascript/verification"><code>Verification</code></a>, <>An object holding information on the verification of this phone number.</>]},
-{cells: [<code>linkedTo</code>, <code>{"Array<{id: string, type: string}>"}</code>, <>An object containing information about any other identification that might be linked to this phone number.</>]},
-{cells: [<code>backupCodes</code>, <code>string[] | undefined</code>, <>A list of backup codes in case of lost phone number access.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this phone number. |
+| `phoneNumber` | `string` | The value of this phone number, in [E.164 format](https://en.wikipedia.org/wiki/E.164). |
+| `reservedForSecondFactor` | `boolean` | Set to `true` if this phone number is reserved for multi-factor authentication (2FA). Set to `false` otherwise. |
+| `defaultSecondFactor` | `boolean` | Set to `true` if this phone number is the default second factor. Set to `false` otherwise. A user must have exactly one default second factor, if multi-factor authentication (2FA) is enabled. |
+| `verification` | [`Verification`](/docs/references/javascript/verification) | An object holding information on the verification of this phone number. |
+| `linkedTo` | `Array<{id: string, type: string}>` | An object containing information about any other identification that might be linked to this phone number. |
+| `backupCodes` | `string[] | undefined` | A list of backup codes in case of lost phone number access. |
 
 ## Methods
 
@@ -49,7 +41,7 @@ Creates a new phone number for the current user.
 function destroy(): Promise<void>;
 ```
 
-Delete this phone number.
+Deletes this phone number.
 
 ### `toString()`
 
@@ -57,9 +49,7 @@ Delete this phone number.
 function toString(): string;
 ```
 
-Returns the phone number value in [E.164 format](https://en.wikipedia.org/wiki/E.164).
-
-The value is taken from the PhoneNumber.phoneNumber attribute.
+Returns the phone number value in [E.164 format](https://en.wikipedia.org/wiki/E.164). Can also be accessed via the `PhoneNumber.phoneNumber` attribute.
 
 ## Additional methods
 
