use clerkClient instead of clerk from node SDK

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -35,10 +35,10 @@ import { clerkClient } from "@clerk/fastify";
 </Tab>
 
 <Tab>
-The Backend SDK is accessible via the `clerk` object if you are using Node.
+The Backend SDK is accessible via the `clerkClient` object if you are using Node.
 
 ```js
-import clerk from '@clerk/clerk-sdk-node';
+import clerkClient from '@clerk/clerk-sdk-node';
 ```
 </Tab>
 </Tabs>
