--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -82,7 +82,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 ```
 
 ```js filename="updateUser.js"
-import clerk from '@clerk/clerk-sdk-node';
+import clerkClient from '@clerk/clerk-sdk-node';
 
 app.post('/api/update-user',
   // ClerkExpressRequireAuth returns an error for unauthorized requests
@@ -97,7 +97,7 @@ app.post('/api/update-user',
     // The user attributes to update
     const params = { firstName: "John", lastName: "Wick" }
 
-    const updatedUser = await clerk.users.updateUser(userId, params)
+    const updatedUser = await clerkClient.users.updateUser(userId, params)
 
     res.json({ updatedUser })
   })
