--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -37,7 +37,7 @@ Below is an example of an `.env.local` file. If you are signed into your Clerk D
 
 <InjectKeys>
 
-```sh filename=".env.local"
+```env filename=".env.local"
 CLERK_SECRET_KEY={{secret}}
 ```
 
@@ -47,11 +47,11 @@ CLERK_SECRET_KEY={{secret}}
 
 ## Resources
 
-All resource operations are mounted as sub-APIs on the `Clerk` class. For more information, check out the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
+All resource operations are mounted as sub-APIs on the `clerkClient` object. For more information, check out the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
 
 ## Customizing resources
 
-The following options are available for you to customize the behaviour of the `Clerk` class.
+The following options are available for you to customize the behaviour of the `clerkClient` object.
 
 <Callout type="info">
   Most options can also be set as environment variables so that you don't need to pass anything to the constructor or set it via the available setters.
@@ -79,9 +79,9 @@ If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable 
 <Tabs items={["ESM", "CJS"]}>
 <Tab>
 ```js
-import clerk from '@clerk/clerk-sdk-node';
+import clerkClient from '@clerk/clerk-sdk-node';
 
-const userList = await clerk.users.getUserList();
+const userList = await clerkClient.users.getUserList();
 ```
 
 Or if you are interested only in a certain resource:
@@ -96,9 +96,9 @@ const sessionList = await sessions.getSessionList();
 <Tab>
 ```js
 const pkg = require('@clerk/clerk-sdk-node');
-const clerk = pkg.default;
+const clerkClient = pkg.default;
 
-clerk.emails
+clerkClient.emails
   .createEmail({ fromEmailName, subject, body, emailAddressId })
   .then((email) => console.log(email))
   .catch((error) => console.error(error));
@@ -120,16 +120,16 @@ clients
 
 #### Setters
 
-The following setters are available for you to change the options even after you've obtained a handle on a `Clerk` or sub-api instance:
+The following setters are available for you to change the options even after you've obtained a handle on a `clerkClient` or sub-api instance:
 
-If you have a `Clerk` handle:
+If you have a `clerkClient` handle:
 
-- `clerk.secretKey = value;`
-- `clerk.serverApiUrl = value;`
-- `clerk.apiVersion = value;`
-- `clerk.httpOptions = value;`
+- `clerkClient.secretKey = value;`
+- `clerkClient.serverApiUrl = value;`
+- `clerkClient.apiVersion = value;`
+- `clerkClient.httpOptions = value;`
 
-If are using a sub-api handle and wish to change options on the (implicit) singleton `Clerk` instance:
+If are using a sub-api handle and wish to change options on the (implicit) singleton `clerkClient` instance:
 
 - `setClerkSecretKey(value)`
 - `setClerkServerApiUrl(value)`
@@ -138,21 +138,25 @@ If are using a sub-api handle and wish to change options on the (implicit) singl
 
 ### Custom instantiation
 
+If you would like to customize the behavior of the SDK, you can instantiate a `clerkClient` instance yourself by passing in [options](#customizing-resources).
+
+The example below shows how to create a `clerkClient` instance and pass a Clerk secret key instead of setting a `CLERK_SECRET_KEY` environment variable.
+
 <CodeBlockTabs options={["ESM", "CJS"]}>
 ```js
 import Clerk from '@clerk/clerk-sdk-node/esm/instance';
 
-const clerk = new Clerk({ secretKey: 'secret_key' });
+const clerkClient = Client({ secretKey: 'secret_key' });
 
-const clientList = await clerk.clients.getClientList();
+const clientList = await clerkClient.clients.getClientList();
 ```
 
 ```js
 const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
 
-const clerk = new Clerk({ secretKey: 'secret_key' });
+const clerkClient = Clerk({ secretKey: 'secret_key' });
 
-clerk.smsMessages
+clerkClient.smsMessages
   .createSMSMessage({ message, phoneNumberId })
   .then((smsMessage) => console.log(smsMessage))
   .catch((error) => console.error(error));
