--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -51,13 +51,13 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 ```
 
 ```ts filename="private.ts"
-import { clerk } from "@clerk/clerk-sdk-node";
+import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/deleteUser', (req, res) => {
   const userId = req.body.userId;
 
   try {
-    await clerk.users.deleteUser(userId);
+    await clerkClient.users.deleteUser(userId);
     return res.status(200).json({ message: 'Success' });
   }
   catch (error) {
