--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -24,9 +24,9 @@ withAuth(handler, { jwtKey: 'my_clerk_public_key' });
 Custom instance initialization:
 
 ```js
-import Clerk from '@clerk/clerk-sdk-node/instance';
+import clerkClient from '@clerk/clerk-sdk-node/instance';
 
-const clerk = new Clerk({ jwtKey: 'my_clerk_public_key' });
+const clerk = clerkClient({ jwtKey: 'my_clerk_public_key' });
 ```
 
 ## Validate the Authorized Party of a session token
