Edited information to make auth() and getAuth() information fully accurate.

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -283,7 +283,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
 <Tabs items={["Route Handler", "Route Handler w/ User Fetch"]}>
   <Tab>
-    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected by [middleware](/docs/references/nextjs/auth-middleware). 
+    A Route Hanlder added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="app/api/user/route.[jsx/tsx]"
     import { NextResponse } from 'next/server';
@@ -304,7 +304,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     ```
   </Tab>
   <Tab>
-    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected by [middleware](/docs/references/nextjs/auth-middleware). 
+    A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use  [`currentUser()`](/docs/references/nextjs/current-user) helper to get the full [`User`][user-object] object. Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
@@ -334,7 +334,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
 <Tabs items={["API Route", "API Route w/ User Fetch", "getServerSideProps"]}>
   <Tab>
-    For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
+    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="pages/api/auth.ts"
     import type { NextApiRequest, NextApiResponse } from "next";
@@ -354,8 +354,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     ```
   </Tab>
   <Tab>
-    For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
-     
+    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+
     In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
     ```tsx filename="pages/api/auth.ts"
